This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
http://mpc-hc.svn.sourceforge.net/viewvc/mpc-hc/trunk/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.3 - not released yet
=========================
+ The DirectX runtime dlls are included in the distribution packages
  so it's no longer needed to install the DirectX runtime
+ MpegSplitter: support for DVD-Audio LPCM and MLP in .aob files
* Updated unrar.dll to v4.20b3
* Updated MediaInfoLib to v0.7.58
* Updated ZenLib to v0.4.27
* Updated FFmpeg (git 6fef82f)
* Updated Czech, Russian, Ukrainian, Basque and Polish translations
! The hand cursor wasn't shown in the web links in Keys and WebServer options page
! Toolbar code cleanup and background fix for Windows XP
! Ticket #2330, Fix the radio buttons in the Logo options page
! Ticket #2349, Recent Files: "Clear List" did not remove all files from the list
! Ticket #2356, The "With icons" and "File(s)" options in the Formats options page
  were not applied if no association was previously modified
! Ticket #2362, [DVB] Fix the Electronic Program Guide (EPG):
    - Fix the parsing of the event's information
    - Fix the parsing of the characters' encoding
    - Fix the display of the start and end time when DST is observed
! Ticket #2365, The volume slider wasn't properly redrawn in some cases